txs auto checkin

--- a/PT/probtheory.tex
+++ b/PT/probtheory.tex
@@ -4127,7 +4127,11 @@ To prove we should use Borel-cantelli somehow.
 	\end{equation*}
 	In particular, the event $\omega\in\Omega$ is of the form $\omega=(\omega_1,\omega_2,\ldots)$ with $\omega_i\in\{0,1\}$. Let 
 	\begin{equation*}
-		C:=\left\{\left\{\omega\in\Omega:\omega_k=a,a\in\{0,1\}\right\}\right\}
+		C:=\left\{\left\{\omega\in\Omega:\omega_k=a,a\in\{0,1\},n\in\N\right\}\right\}
+	\end{equation*}
+	and 
+	\begin{equation*}
+		\F:=\sigma(C).
 	\end{equation*}
 \end{exercise}
 
