txs auto checkin

--- a/PT/probtheory.tex
+++ b/PT/probtheory.tex
@@ -4133,6 +4133,10 @@ To prove we should use Borel-cantelli somehow.
 	\begin{equation*}
 		\F:=\sigma(C).
 	\end{equation*}
+	We want to check whether $\F$ is a good modeling choice for our experiment. For example, if we set
+	\begin{equation*}
+		A:=\left\{..\right\}
+	\end{equation*}
 \end{exercise}
 
 \subsection{Exercise class 2}
