--- a/PT/probtheory.tex
+++ b/PT/probtheory.tex
@@ -4135,10 +4135,9 @@ To prove we should use Borel-cantelli somehow.
 	\end{equation*}
 	We want to check whether $\F$ is a good modeling choice for our experiment. For example, if we set
 	\begin{equation*}
-		A:=\left\{..\right\}
+		A:=\left\{\omega:\frac{#{k\leq n:\omega_k}}{n}\xrightarrow[n\to$\infty$]{}\frac{1}{2}\right\}
 	\end{equation*}
 \end{exercise}
-
 \subsection{Exercise class 2}
 \subsection{Exercise class 3}
 \subsection{Exercise class 4}
