txs auto checkin

--- a/PT/probtheory.tex
+++ b/PT/probtheory.tex
@@ -4139,6 +4139,7 @@ To prove we should use Borel-cantelli somehow.
 	\end{equation*}
 	do we have $A\in\F$?
 \end{exercise}
+Let us introduce a \rv{} (which is a map) $X_n\Omega\to\R$ given by
 \subsection{Exercise class 2}
 \subsection{Exercise class 3}
 \subsection{Exercise class 4}
