--- a/PT/probtheory.tex
+++ b/PT/probtheory.tex
@@ -4141,7 +4141,10 @@ To prove we should use Borel-cantelli somehow.
 \end{exercise}
 Let us introduce a \rv{} (which is a map) $X_n\Omega\to\R$ given by 
 \begin{equation*}
-	eqn
+	X_n=\begin{cases}
+		1 &\text{if }\omega_n=1\\
+		0&\text{if }\omega_n=0.
+	\end{cases}
 \end{equation*}
 \subsection{Exercise class 2}
 \subsection{Exercise class 3}
