txs auto checkin

--- a/PT/probtheory.tex
+++ b/PT/probtheory.tex
@@ -4139,7 +4139,7 @@ To prove we should use Borel-cantelli somehow.
 	\end{equation*}
 	do we have $A\in\F$?
 \end{exercise}
-Let us introduce a \rv{} (which is a map) $X_n\Omega\to\R$ given by 
+Let us introduce a \rv{} (which is a map) $X_n:\Omega\mapsto\R$ given by 
 \begin{equation*}
 	X_n=\begin{cases}
 		1 &\text{if }\omega_n=1\\
