--- a/PT/probtheory.tex
+++ b/PT/probtheory.tex
@@ -4146,6 +4146,7 @@ Let us introduce a \rv{} (which is a map) $X_n:\Omega\mapsto\R$ given by
 		0&\text{if }\omega_n=0.
 	\end{cases}
 \end{equation*}
+Now, $X_n$ is $\F$-measurable (i.e. it is a \rv{} on $(\Omega,\F)$) because $\every B\in\B$
 \subsection{Exercise class 2}
 \subsection{Exercise class 3}
 \subsection{Exercise class 4}
