txs auto checkin

--- a/PT/probtheory.tex
+++ b/PT/probtheory.tex
@@ -4146,7 +4146,10 @@ Let us introduce a \rv{} (which is a map) $X_n:\Omega\mapsto\R$ given by
 		0&\text{if }\omega_n=0.
 	\end{cases}
 \end{equation*}
-Now, $X_n$ is $\F$-measurable (i.e. it is a \rv{} on $(\Omega,\F)$) because $\every B\in\B$
+Now, $X_n$ is $\F$-measurable (i.e. it is a \rv{} on $(\Omega,\F)$) because for $\every B\in\B()$ we have
+\begin{equation*}
+	X^{-1}_{n}(B)=\{\omega\in\}
+\end{equation*}
 \subsection{Exercise class 2}
 \subsection{Exercise class 3}
 \subsection{Exercise class 4}
