--- a/PT/probtheory.tex
+++ b/PT/probtheory.tex
@@ -4146,9 +4146,13 @@ Let us introduce a \rv{} (which is a map) $X_n:\Omega\mapsto\R$ given by
 		0&\text{if }\omega_n=0.
 	\end{cases}
 \end{equation*}
-Now, $X_n$ is $\F$-measurable (i.e. it is a \rv{} on $(\Omega,\F)$) because for $\every B\in\B()$ we have
+Now, $X_n$ is $\F$-measurable (i.e. it is a \rv{} on $(\Omega,\F)$) because for $\every B\in\B(\R)$ we have
 \begin{equation*}
-	X^{-1}_{n}(B)=\{\omega\in\}
+	X^{-1}_{n}(B)=\{\omega\in\Omega:X_n(\omega)\in B\}
+\end{equation*}
+and this set actually belongs to $\F$. Why? Because it basically is
+\begin{equation*}
+	\{\omega\in\Omega:X_n(\omega)=B\}
 \end{equation*}
 \subsection{Exercise class 2}
 \subsection{Exercise class 3}
