txs auto checkin

--- a/PT/probtheory.tex
+++ b/PT/probtheory.tex
@@ -4152,7 +4152,12 @@ Now, $X_n$ is $\F$-measurable (i.e. it is a \rv{} on $(\Omega,\F)$) because for 
 \end{equation*}
 and this set actually belongs to $\F$. Why? Because it basically is
 \begin{equation*}
-	\{\omega\in\Omega:X_n(\omega)=B\}
+	\{\omega\in\Omega:X_n(\omega)=B\}=\begin{cases}
+		\emptyset&\text{if }0,1\not\in B\\
+		\Omega&\text{if }0,1\in B\\
+		\{\omega\in\Omega:X_n(\omega)=1\}&\text{if }0\not\in B,1\in B\\
+		\{\omega\in\Omega:X_n(\omega)=0\}&\text{if }0\in B,1\not\in B\\
+	\end{cases}
 \end{equation*}
 \subsection{Exercise class 2}
 \subsection{Exercise class 3}
