--- a/PT/probtheory.tex
+++ b/PT/probtheory.tex
@@ -4155,7 +4155,7 @@ and this set actually belongs to $\F$. Why? Because it basically is
 	\{\omega\in\Omega:X_n(\omega)=B\}=\begin{cases}
 		\emptyset&\text{if }0,1\not\in B\\
 		\Omega&\text{if }0,1\in B\\
-		\{\omega\in\Omega:X_n(\omega)=1\}&\text{if }0\not\in B,1\in B\\
+		\{\underbracket{\omega\in\Omega:X_n(\omega)=1}_{\text{all the $\omega$ with $\omega_n=1$}}\}&\text{if }0\not\in B,1\in B\\
 		\{\omega\in\Omega:X_n(\omega)=0\}&\text{if }0\in B,1\not\in B\\
 	\end{cases}
 \end{equation*}
