txs auto checkin

--- a/PT/probtheory.tex
+++ b/PT/probtheory.tex
@@ -4172,10 +4172,10 @@ since $S_n$ is $\F$-measurable, so are its $\limsup$ and $\liminf$. By doing so 
 \begin{exercise}
 	Let $\Omega=\{0,1\}^{\N}$. For a given $n\in\N$ let 
 	\begin{equation*}
-		\mathcal{A}=\left\{\{\omega=(\omega_1,\omega_2,\cdots)\in\Omega:(\omega_1,\ldots,\omega_n)\in B\}\text{for some }B\subset\{0,1\}^{n}\right\}.
+		\mathcal{A}_n=\left\{\{\omega=(\omega_1,\omega_2,\cdots)\in\Omega:(\omega_1,\ldots,\omega_n)\in B\}\text{for some }B\subset\{0,1\}^{n}\right\}.
 	\end{equation*}
 	\begin{enumerate}[\circnum]
-		\item 
+		\item Show that $\mathcal{A}_n$ is a \sa
 	\end{enumerate}
 \end{exercise}
 \subsection{Exercise class 2}
