txs auto checkin

--- a/PT/probtheory.tex
+++ b/PT/probtheory.tex
@@ -4175,7 +4175,8 @@ since $S_n$ is $\F$-measurable, so are its $\limsup$ and $\liminf$. By doing so 
 		\mathcal{A}_n=\left\{\{\omega=(\omega_1,\omega_2,\cdots)\in\Omega:(\omega_1,\ldots,\omega_n)\in B\}\text{for some }B\subset\{0,1\}^{n}\right\}.
 	\end{equation*}
 	\begin{enumerate}[\circnum]
-		\item Show that $\mathcal{A}_n$ is a \sa
+		\item Show that $\mathcal{A}_n$ is a \sa.
+		\item Show that $\bigcup_{n\in\N}\mathcal{A}_{n}$ is not a \sa.
 	\end{enumerate}
 \end{exercise}
 \subsection{Exercise class 2}
