txs auto checkin

--- a/ANB/pacco.sty
+++ b/ANB/pacco.sty
@@ -1,6 +1,7 @@
 \usepackage[T1]{fontenc}%
 %\usepackage{fontspec} %I want to be a XeLaTeX bitch but my heard is in pdftex...
-\usepackage{lmodern}
+%\usepackage{lmodern}
+\usepackage{ebgaramond}
 %\usepackage{fontspec}
 %\setmainfont{Aptos}
 % Language setting
