txs auto checkin

--- a/ANB/pacco.sty
+++ b/ANB/pacco.sty
@@ -1,5 +1,6 @@
 \usepackage[T1]{fontenc}%
 %\usepackage{fontspec} %I want to be a XeLaTeX bitch but my heard is in pdftex...
+\usepackage[utf8]{inputenc}
 %\usepackage{lmodern}
 \usepackage{ebgaramond}
 %\usepackage{fontspec}
