--- a/ANB/pacco.sty
+++ b/ANB/pacco.sty
@@ -1,8 +1,6 @@
 \usepackage[T1]{fontenc}%
 %\usepackage{fontspec} %I want to be a XeLaTeX bitch but my heard is in pdftex...
-\usepackage{ebgaramond}
-\usepackage[utf8]{inputenc}
-%\usepackage{lmodern}
+\usepackage{lmodern}
 %\usepackage{fontspec}
 %\setmainfont{Aptos}
 % Language setting
