txs auto checkin

--- a/PT/pacco.sty
+++ b/PT/pacco.sty
@@ -1,7 +1,7 @@
 \usepackage[T1]{fontenc}%
 %\usepackage{fontspec} %I want to be a XeLaTeX bitch but my heard is in pdftex...
 %\usepackage{lmodern}
-\usepackage{garamond}
+\usepackage{garamondx}
 % Language setting
 % Replace `english' with e.g. `spanish' to change the document language
 \usepackage[english]{babel}
