txs auto checkin

--- a/PT/probtheory.tex
+++ b/PT/probtheory.tex
@@ -746,7 +746,7 @@ We are integrating the function over the space where it is defined, but since we
 \end{remark}
 \begin{wrapfigure}{R}{0.6\textwidth}
 	\centering
-	\includegraphics[width=0.6\textwidth]{kept3}
+	\includegraphics[width=0.\textwidth]{kept3}
 	\caption{And then he turned himself into a pickle, funniest shit I've ever seen.}
 	\label{fig:kept3}
 \end{wrapfigure}
