txs auto checkin

--- a/PT/probtheory.tex
+++ b/PT/probtheory.tex
@@ -744,12 +744,12 @@ We are integrating the function over the space where it is defined, but since we
 \begin{remark}
 	The expectation of $X$ exists \underline{if and only of} the related integral exists. So the existence of the expectation is the existence of the integral.\\
 \end{remark}
-\begin{wrapfigure}{R}{0.6\textwidth}
+\begin{figure}{H}{0.6\textwidth}
 	\centering
 	\includegraphics[width=0.5\textwidth]{kept3}
 	\caption{And then he turned himself into a pickle, funniest shit I've ever seen.}
 	\label{fig:kept3}
-\end{wrapfigure}
+\end{figure}
 Consider the \rv{} $X$, with its positive part $X^+$ and its negative part $X^-$. Moreover, remember that 
 \[X=X^+-X^-\]
 where both the positive part \textit{and} the negative part are positive functions (remember?\footnote{No. Happy?}). If we apply the expectation to $X$, by the linearity of the integral operator we have that:
