--- a/PT/probtheory.tex
+++ b/PT/probtheory.tex
@@ -744,7 +744,7 @@ We are integrating the function over the space where it is defined, but since we
 \begin{remark}
 	The expectation of $X$ exists \underline{if and only of} the related integral exists. So the existence of the expectation is the existence of the integral.\\
 \end{remark}
-\begin{figure}{H}{0.6\textwidth}
+\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.5\textwidth]{kept3}
 	\caption{And then he turned himself into a pickle, funniest shit I've ever seen.}
