txs auto checkin

--- a/PT/pacco.sty
+++ b/PT/pacco.sty
@@ -11,6 +11,8 @@
 \usepackage[a4paper,top=2cm,bottom=2cm,left=3cm,right=3cm,marginparwidth=1.75cm]{geometry}
 
 % Useful packages
+\usepackage[cmintegrals,cmbraces]{newtxmath}
+\usepackage{ebgaramond-maths}
 
 \usepackage[scr=euler,cal=dutchcal,frak=euler,bb=dsfontserif,bbsymbols]{mathalfa}
 \usepackage{amsmath,amssymb,bbm}
