txs auto checkin

--- a/PT/pacco.sty
+++ b/PT/pacco.sty
@@ -15,7 +15,7 @@
 %\usepackage{ebgaramond-maths}
 
 \usepackage[scr=euler,cal=dutchcal,frak=euler,bb=dsfontserif,bbsymbols]{mathalfa}
-\usepackage{amsmath,amssymb,bbm}
+%\usepackage{amsmath,amssymb,bbm}
 \usepackage{graphicx}
 \usepackage[x11names,table]{xcolor}
 \usepackage[colorlinks=true, allcolors=DarkOrchid4]{hyperref}
