txs auto checkin

--- a/PT/pacco.sty
+++ b/PT/pacco.sty
@@ -21,7 +21,7 @@
 \usepackage[colorlinks=true, allcolors=DarkOrchid4]{hyperref}
 \usepackage{lipsum} 
 \usepackage[shortlabels]{enumitem}
-%\usepackage{amsthm}   
+\usepackage{amsthm}   
 \usepackage{array}
 \usepackage{pdfpages}
 %\usepackage{tipa} %perchè si stai zitto 
