txs auto checkin

--- a/PT/pacco.sty
+++ b/PT/pacco.sty
@@ -12,7 +12,7 @@
 
 % Useful packages
 \usepackage[cmintegrals,cmbraces]{newtxmath}
-%\usepackage{ebgaramond-maths}
+\usepackage{ebgaramond-maths}
 
 \usepackage[scr=euler,cal=dutchcal,frak=euler,bb=dsfontserif,bbsymbols]{mathalfa}
 %\usepackage{amsmath,amssymb,bbm}
