txs auto checkin

--- a/PT/pacco.sty
+++ b/PT/pacco.sty
@@ -16,6 +16,8 @@
 \usepackage{ebgaramond-maths}
 
 \usepackage[scr=euler,cal=dutchcal,frak=euler,bb=dsfontserif,bbsymbols]{mathalfa}
+\usepackage{bbm}
+\usepackage{bm}
 %\usepackage{amsmath,amssymb,bbm}
 \usepackage{graphicx}
 \usepackage[x11names,table]{xcolor}
