txs auto checkin

--- a/PT/pacco.sty
+++ b/PT/pacco.sty
@@ -12,8 +12,8 @@
 
 % Useful packages
 \usepackage{amsthm}
-\usepackage[cmintegrals,cmbraces]{newtxmath}
-\usepackage{ebgaramond-maths}
+\usepackage[cmintegrals,cmbraces,ebgaramond,v]{newtxmath}
+%\usepackage{ebgaramond-maths}
 
 \usepackage[scr=euler,cal=dutchcal,frak=euler,bb=dsfontserif,bbsymbols]{mathalfa}
 \usepackage{bbm}
