txs auto checkin

--- a/PT/pacco.sty
+++ b/PT/pacco.sty
@@ -12,7 +12,7 @@
 
 % Useful packages
 \usepackage{amsthm}
-\usepackage[cmintegrals,cmbraces,ebgaramond,v]{newtxmath}
+\usepackage[cmintegrals,cmbraces,ebgaramond,vvarbb,subscriptcorrection]{newtxmath}
 %\usepackage{ebgaramond-maths}
 
 \usepackage[scr=euler,cal=dutchcal,frak=euler,bb=dsfontserif,bbsymbols]{mathalfa}
