--- a/PT/pacco.sty
+++ b/PT/pacco.sty
@@ -1,4 +1,7 @@
-\usepackage[T1]{fontenc}%
+\usepackage[lining,semibold,scaled=1.05]{ebgaramond}% Latex BOLD renders with ebgaramond semibold
+\usepackage[T1]{fontenc} % best for Western European languages
+\usepackage[varqu,varl]{inconsolata}% a typewriter font must be defined
+\usepackage{amsmath,amsthm}% must be loaded before newtxmath
 %\usepackage{fontspec} %I want to be a XeLaTeX bitch but my heard is in pdftex...
 %\usepackage{lmodern}
 \usepackage[scale=1]{ebgaramond}
