txs auto checkin

--- a/PT/pacco.sty
+++ b/PT/pacco.sty
@@ -14,8 +14,7 @@
 \usepackage[a4paper,top=2cm,bottom=2cm,left=3cm,right=3cm,marginparwidth=1.75cm]{geometry}
 
 % Useful packages
-\usepackage{amsthm}
-\usepackage[cmintegrals,cmbraces,ebgaramond,vvarbb,subscriptcorrection]{newtxmath}
+\usepackage[cmintegrals,cmbraces]{newtxmath}
 %\usepackage{ebgaramond-maths}
 
 \usepackage[scr=euler,cal=dutchcal,frak=euler,bb=dsfontserif,bbsymbols]{mathalfa}
