--- a/PT/probtheory.tex
+++ b/PT/probtheory.tex
@@ -4179,6 +4179,9 @@ since $S_n$ is $\F$-measurable, so are its $\limsup$ and $\liminf$. By doing so 
 		\item Show that $\bigcup_{n\in\N}\mathcal{A}_{n}$ is not a \sa.
 	\end{enumerate}
 \end{exercise}
+\begin{enumerate}[\circnum]
+	\item If we show that $\mathcal{A}_n$ is finite, then it is enough to prove that it is an algebra
+\end{enumerate}
 \subsection{Exercise class 2}
 \subsection{Exercise class 3}
 \subsection{Exercise class 4}
