--- a/PT/probtheory.tex
+++ b/PT/probtheory.tex
@@ -4180,7 +4180,11 @@ since $S_n$ is $\F$-measurable, so are its $\limsup$ and $\liminf$. By doing so 
 	\end{enumerate}
 \end{exercise}
 \begin{enumerate}[\circnum]
-	\item If we show that $\mathcal{A}_n$ is finite, then it is enough to prove that it is an algebra, since the closure under \textit{union, intersection and complementation} will automatically follow from this. We easily see that $\mathcal{A}_n$ is finite because $n$ is fixed so $\{0,1\}^{n}$ is finite and since the varying set in this case is $B\subset\{0,1\}^{n}$ then also $\mathcal{A}_n$ must be finite.
+	\item If we show that $\mathcal{A}_n$ is finite, then it is enough to prove that it is an algebra, since the closure under \textit{union, intersection and complementation} will automatically follow from this.\\
+	 We easily see that $\mathcal{A}_n$ is finite because $n$ is fixed so $\{0,1\}^{n}$ is finite and since the varying set in this case is $B\subset\{0,1\}^{n}$ then also $\mathcal{A}_n$ must be finite. Fore example we would get
+	\begin{equation*}
+		\mathcal{A}=
+	\end{equation*}
 \end{enumerate}
 \subsection{Exercise class 2}
 \subsection{Exercise class 3}
