txs auto checkin

--- a/PT/chap1.tex
+++ b/PT/chap1.tex
@@ -1,1 +1,5 @@
-\documentclass[article]{standalone}
+\documentclass[class=article]{standalone}
+\usepackage{pacco}
+\begin{document}
+	
+\end{document}
