txs auto checkin

--- a/PT/chap1.tex
+++ b/PT/chap1.tex
@@ -1,4 +1,4 @@
-\documentclass[class=article]{standalone}
+\documentclass[class=report]{standalone}
 \usepackage{pacco}
 \begin{document}
 		\chapter{The basics of probability theory}
