--- a/PT/chap2.tex
+++ b/PT/chap2.tex
@@ -1,4 +1,4 @@
-\documentclass[class=report]{standalone}
+\documentclass[class=report,crop=false]{standalone}
 \usepackage{pacco}
 \begin{document}
 	\chapter{A first study in stochastic processes: Martingales}
