txs auto checkin

--- a/PT/chap1.tex
+++ b/PT/chap1.tex
@@ -1,7 +1,7 @@
-\documentclass[class=report]{standalone}
+\documentclass[class=report,crop=false]{standalone}
 \usepackage{pacco}
 \begin{document}
-		\chapter{The basics of probability theory}
+\chapter{The basics of probability theory}
 	\pagenumbering{arabic}
 	\section{Basics of probability}
 	We start with the probability triplet: $(\Omega,\mathscr{H},\mathbbm{P})$ 
