txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -1,4 +1,4 @@
-\documentclass[class=report,crop=]{standalone}
+\documentclass[class=report,crop=false]{standalone}
 \usepackage{pacco}
 \begin{document}
 	\chapter{Exercises and questions}
