--- a/PT/chap1.tex
+++ b/PT/chap1.tex
@@ -1,4 +1,4 @@
-\documentclass[class=report,crop=false,border={11}]{standalone}
+\documentclass[class=report,crop=false,border={11pt,10pt}]{standalone}
 \usepackage{pacco}
 \begin{document}
 \chapter{The basics of probability theory}
