txs auto checkin

--- a/PT/probtheory.tex
+++ b/PT/probtheory.tex
@@ -20,8 +20,9 @@
 		\hfill Kotatsu
 	\end{preface}
 	\tableofcontents
-
-
+\include{chap1}
+\include{chap2}
+\include{chap3}
 
 \clearpage
 \begin{closethedeal}
