txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -67,7 +67,7 @@
 		\item If we show that $\mathcal{A}_n$ is finite, then it is enough to prove that it is an algebra, since the closure under \textit{union, intersection and complementation} will automatically follow from this.\\
 		We easily see that $\mathcal{A}_n$ is finite because $n$ is fixed so $\{0,1\}^{n}$ is finite and since the varying set in this case is $B\subset\{0,1\}^{n}$ then also $\mathcal{A}_n$ must be finite. Fore example we would get
 		\begin{equation*}
-			\mathcal{A}=
+			\mathcal{A}_1=\left\{\{\omega\in\Omega:\omega_1\in\{0\}\},\{\omeg\}\right\}
 		\end{equation*}
 	\end{enumerate}
 	\subsection{Exercise class 2}
