txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -71,7 +71,15 @@
 		\end{equation*}
 		We can also check that this is an algebra:
 		\begin{enumerate}
-			\item it is obvious that $\emptyset\in\mathcal{A}_n$
+			\item it is obvious that $\emptyset\in\mathcal{A}_n$;
+			\item let $A\in\mathcal{A}_n$. This means that $\exists B\subset\{0,1\}^{n}$ such that
+			\begin{equation*}
+				A=\{\omega\in\Omega:(\omega_1,\ldots,\omega_n)\in B\}
+			\end{equation*}
+			and so
+			\begin{align*}
+				A^c&=\{\omega\in\Omega:(\omega_1,\ldots,)\}
+			\end{align*}
 		\end{enumerate}
 	\end{enumerate}
 	\subsection{Exercise class 2}
