--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -78,7 +78,7 @@
 			\end{equation*}
 			and so
 			\begin{align*}
-				A^c&=\{\omega\in\Omega:(\omega_1,\ldots,)\}
+				A^c&=\{\omega\in\Omega:(\omega_1,\ldots,\omega_n)\notin B\}
 			\end{align*}
 		\end{enumerate}
 	\end{enumerate}
