txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -78,8 +78,10 @@
 			\end{equation*}
 			and so
 			\begin{align*}
-				A^c&=\{\omega\in\Omega:(\omega_1,\ldots,\omega_n)\notin B\}
+				A^c&=\{\omega\in\Omega:(\omega_1,\ldots,\omega_n)\notin B\}\\
+				&=\{\omega\in\Omega:(\omega_1,\ldots,\omega_n)\in B^{c}\}\in\mathcal{A}_{n}
 			\end{align*}
+			since $B^{c}\subset\{0,1\}^{n}$
 		\end{enumerate}
 	\end{enumerate}
 	\subsection{Exercise class 2}
