txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -81,7 +81,7 @@
 				A^c&=\{\omega\in\Omega:(\omega_1,\ldots,\omega_n)\notin B\}\\
 				&=\{\omega\in\Omega:(\omega_1,\ldots,\omega_n)\in B^{c}\}\in\mathcal{A}_{n}
 			\end{align*}
-			since $B^{c}\subset\{0,1\}^{n}$
+			since $B^{c}\subset\{0,1\}^{n}$. So $ $
 		\end{enumerate}
 	\end{enumerate}
 	\subsection{Exercise class 2}
