--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -52,7 +52,7 @@
 		&=\left\{\omega\in\Omega:\liminf_{n \to \infty}\frac{S_n}{n}=\limsup_{n\to\infty}\frac{S_n}{n}=\frac{1}{2}\right\}\\
 		&=\left\{\underbrace{\omega\in\Omega:\liminf_{n \to \infty}\frac{S_n}{n}=\frac{1}{2}}_{\in\F}\right\}\cap\left\{\underbrace{\omega\in\Omega:\limsup_{n \to \infty}\frac{S_n}{n}=\frac{1}{2}}_{\in\F}\right\}
 	\end{align*}
-	since $S_n$ is $\F$-measurable, so are its $\limsup$ and $\liminf$. By doing so we went from the limit, which is not a nice thing to handle when it comes to measurability, to $\liminf$ and $\limsup$ that are more manageable objects.
+	since $S_n$ is $\F$-measurable, so are its $\limsup$ and $\liminf$. By doing so we went from the limit, which is not a nice thing to handle\footnote{unlike a gun pointed to my head by myself.} when it comes to measurability, to $\liminf$ and $\limsup$ that are more manageable objects.
 	\begin{exercise}
 		Let $\Omega=\{0,1\}^{\N}$. For a given $n\in\N$ let 
 		\begin{equation*}
@@ -81,7 +81,7 @@
 				A^c&=\{\omega\in\Omega:(\omega_1,\ldots,\omega_n)\notin B\}\\
 				&=\{\omega\in\Omega:(\omega_1,\ldots,\omega_n)\in B^{c}\}\in\mathcal{A}_{n}
 			\end{align*}
-			since $B^{c}\subset\{0,1\}^{n}$. So $ $
+			since $B^{c}\subset\{0,1\}^{n}$. So $\mathcal{A}_{n}$ is closed under intersection.
 		\end{enumerate}
 	\end{enumerate}
 	\subsection{Exercise class 2}
