txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -83,6 +83,11 @@
 			\end{align*}
 			since $B^{c}\subset\{0,1\}^{n}$. So $\mathcal{A}_{n}$ is closed under intersection.
 			\item Let $A_1,A_2\in\mathcal{A}_n$. Then
+			\begin{align*}
+				A_1\cup A_2&=\{\omega\in\Omega:(\omega_1,\ldots,\omega_n\in B_1)\cup \{\omega\in\Omega:(\omega_1,\ldots,\omega_n)\in B_2\}\}\\
+				&=\{\omega\in\Omega:(\omega_1,\ldots,\omega_n)\in B_1\cup B_2\}\in\mathcal{A}_n
+			\end{align*}
+			because of course $B_1\cup B_2\subset\{0,1\}$
 		\end{enumerate}
 	\end{enumerate}
 	\subsection{Exercise class 2}
