--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -87,7 +87,7 @@
 				A_1\cup A_2&=\{\omega\in\Omega:(\omega_1,\ldots,\omega_n\in B_1)\cup \{\omega\in\Omega:(\omega_1,\ldots,\omega_n)\in B_2\}\}\\
 				&=\{\omega\in\Omega:(\omega_1,\ldots,\omega_n)\in B_1\cup B_2\}\in\mathcal{A}_n
 			\end{align*}
-			because of course $B_1\cup B_2\subset\{0,1\}$
+			because of course $B_1\cup B_2\subset\{0,1\}^{n}$. So $\mathcal{A}_n$ is closed under union.
 		\end{enumerate}
 	\end{enumerate}
 	\subsection{Exercise class 2}
