--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -89,6 +89,7 @@
 			\end{align*}
 			because of course $B_1\cup B_2\subset\{0,1\}^{n}$. So $\mathcal{A}_n$ is closed under union.
 		\end{enumerate}
+		So we conclude that $\mathcal{A}_n$ is an algebra and since it is finite it is also a \sa.
 	\end{enumerate}
 	\subsection{Exercise class 2}
 	\subsection{Exercise class 3}
