txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -90,7 +90,7 @@
 			because of course $B_1\cup B_2\subset\{0,1\}^{n}$. So $\mathcal{A}_n$ is closed under union.
 		\end{enumerate}
 		So we conclude that $\mathcal{A}_n$ is an algebra and since it is finite it is also a \sa.
-		\item To prove that $\bigcup_n$
+		\item To prove that $\bigcup_n\mathcal{A}_n$ is \textit{not} a \sa{} it is sufficient to find an element $A\in\sigma\left(\bigcup_n\mathcal{A}_n\right)$
 	\end{enumerate}
 	\subsection{Exercise class 2}
 	\subsection{Exercise class 3}
