txs auto checkin

--- a/PT/pacco.sty
+++ b/PT/pacco.sty
@@ -449,6 +449,7 @@
 									\newcommand{\N}{\mathbb{N}}
 									\newcommand{\T}{\mathbb{T}}
 									\newcommand{\Tbar}{\overline{\T}}
+									\newcommand{\A}{\mathscr{A}}
 									\newcommand{\Nstar}{\N^{*}}
 									\newcommand{\Rext}{\overline{\R}}
 									\newcommand{\io}{\text{ i.o.}}
