txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -95,7 +95,7 @@
 		\begin{equation*}
 			A_n=\{\omega\in\Omega:(\omega_1,\ldots,\omega_n)=(0,\ldots,0)\}.
 		\end{equation*}
-		So $\{\mathbf{0}\}\in\sigma\left(\bigcup_n\A_n\right)$ 
+		Clearly $A_n\in\A_n\subset\bigcup_m\A_m$, so $\{\mathbf{0}\}\in\sigma\left(\bigcup_n\A_n\right)$ since it is expressed as the countable intersection of $\bigcup_n\A_n$.
 	\end{enumerate}
 	\subsection{Exercise class 2}
 	\subsection{Exercise class 3}
