txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -97,6 +97,9 @@
 		\end{equation*}
 		Clearly $A_n\in\A_n\subset\bigcup_m\A_m$, so $\{\mathbf{0}\}\in\sigma\left(\bigcup_n\A_n\right)$ since it is expressed as the countable intersection of $\bigcup_n\A_n$.
 	\end{enumerate}
+	\begin{exercise}
+		Let $(\Omega,\A,\pr)$ be a probability space
+	\end{exercise}
 	\subsection{Exercise class 2}
 	\subsection{Exercise class 3}
 	\subsection{Exercise class 4}
