txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -98,7 +98,13 @@
 		Clearly $A_n\in\A_n\subset\bigcup_m\A_m$, so $\{\mathbf{0}\}\in\sigma\left(\bigcup_n\A_n\right)$ since it is expressed as the countable intersection of $\bigcup_n\A_n$.
 	\end{enumerate}
 	\begin{exercise}
-		Let $(\Omega,\A,\pr)$ be a probability space
+		Let $(\Omega,\A,\pr)$ be a probability space. Let $\F$ be defined by
+		\begin{equation*}
+			\F:=\left\{A\in\A:\pr(A)\in\{0,1\}\right\}.
+		\end{equation*}
+		\begin{enumerate}[\circnum]
+			\item 
+		\end{enumerate}
 	\end{exercise}
 	\subsection{Exercise class 2}
 	\subsection{Exercise class 3}
