txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -103,7 +103,12 @@
 			\F:=\left\{A\in\A:\pr(A)\in\{0,1\}\right\}.
 		\end{equation*}
 		\begin{enumerate}[\circnum]
-			\item 
+			\item Show that $\F$ is a \sa.
+			\item find examples such that
+			\begin{enumerate}
+				\item $\F=\{\emptyset,\Omega\}$;
+				\item $\F$ has infinitely many elements.
+			\end{enumerate}
 		\end{enumerate}
 	\end{exercise}
 	\subsection{Exercise class 2}
