txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -111,6 +111,7 @@
 			\end{enumerate}
 		\end{enumerate}
 	\end{exercise}
+	\begin
 	\subsection{Exercise class 2}
 	\subsection{Exercise class 3}
 	\subsection{Exercise class 4}
