txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -111,7 +111,9 @@
 			\end{enumerate}
 		\end{enumerate}
 	\end{exercise}
-	\begin
+	\begin{enumerate}[\item]
+		\item We show that $\emptyset\in\F$. Notice that $\pr(\Omega)=1$ and so $\Omega\in\F$. Since $\F$ is a \sa, it is closed
+	\end{enumerate}
 	\subsection{Exercise class 2}
 	\subsection{Exercise class 3}
 	\subsection{Exercise class 4}
