--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -111,8 +111,10 @@
 			\end{enumerate}
 		\end{enumerate}
 	\end{exercise}
-	\begin{enumerate}[\item]
-		\item We show that $\emptyset\in\F$. Notice that $\pr(\Omega)=1$ and so $\Omega\in\F$. Since $\F$ is a \sa, it is closed under complementation because if $F\in\F$ then either $\pr(F)=0$ or $\pr(F)=1$. Hence $\pr(F^{c})=1-\pr(F)\in\{0,1\}$. Thus $\Omega^{c}\in\F\implies\emptyset\in\F$.
+	\begin{enumerate}[\circnum]
+		\item \begin{itemize}
+			\item We show that $\emptyset\in\F$. Notice that $\pr(\Omega)=1$ and so $\Omega\in\F$. Since $\F$ is a \sa, it is closed under complementation because if $F\in\F$ then either $\pr(F)=0$ or $\pr(F)=1$. Hence $\pr(F^{c})=1-\pr(F)\in\{0,1\}$. Thus $\Omega^{c}\in\F\implies\emptyset\in\F$.
+		\end{itemize}
 	\end{enumerate}
 	\subsection{Exercise class 2}
 	\subsection{Exercise class 3}
