--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -113,8 +113,9 @@
 	\end{exercise}
 	\begin{enumerate}[\circnum]
 		\item \begin{itemize}
-			\item We show that $\emptyset\in\F$. Notice that $\pr(\Omega)=1$ and so $\Omega\in\F$. Since $\F$ is a \sa, it is closed under complementation because if $F\in\F$ then either $\pr(F)=0$ or $\pr(F)=1$. Hence $\pr(F^{c})=1-\pr(F)\in\{0,1\}$. Thus $\Omega^{c}\in\F\implies\emptyset\in\F$.
-			\item We know 
+			\item We show that $\emptyset\in\F$. Notice that $\pr(\Omega)=1$ and so $\Omega\in\F$. notice that $\F$ is closed under complementation because if $F\in\F$ then either $\pr(F)=0$ or $\pr(F)=1$. Hence $\pr(F^{c})=1-\pr(F)\in\{0,1\}$. Thus $\Omega^{c}\in\F\implies\emptyset\in\F$.
+			\item We show that if $F\in\F$ then $F^{c}\in\F$... but we already did that.
+			\item We show that if $F_n\in\F$ then $\bigcup_n F_n\in\F$ 
 		\end{itemize}
 	\end{enumerate}
 	\subsection{Exercise class 2}
