txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -119,8 +119,9 @@
 			\begin{itemize}
 				\item if $\pr(F_n)=0\;\every n$ then $\pr(\bigcup_n F_n)\leq\sum_n\pr(F_n)=0$ and therefore 
 				\begin{equation*}
-					\bigcup_n F_n\in\F
+					\bigcup_n F_n\in\F;
 				\end{equation*}
+				\item if there exists at least on
 			\end{itemize} 
 		\end{itemize}
 	\end{enumerate}
