txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -123,7 +123,7 @@
 				\end{equation*}
 				\item if there exists at least one $\overline{n}$ such that $\pr(F_{\overline{n}})=1$ then using that $F_{\overline{n}}\subseteq\bigcup_nF_n$ we get that
 				\begin{equation*}
-					1=\pr(F_{\overline{n}})\leq\pr(\bigcup_nF_n)\implies\bigcup_nF_n\in\F.
+					1=\pr(F_{\overline{n}})\leq\pr\left(\bigcup_nF_n\right)\implies\bigcup_nF_n\in\F.
 				\end{equation*}
 			\end{itemize} 
 		\end{itemize}
