txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -127,6 +127,7 @@
 				\end{equation*}
 			\end{itemize} 
 		\end{itemize}
+		\item Take any discrete finite $\Omega$ such that each element $\omega\in\Omega$ has positive probability and strictly less than 1 (for example, a uniform probability space). In this case there are no elements $A\in$
 	\end{enumerate}
 	\subsection{Exercise class 2}
 	\subsection{Exercise class 3}
