txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -127,7 +127,10 @@
 				\end{equation*}
 			\end{itemize} 
 		\end{itemize}
-		\item Take any discrete finite $\Omega$ such that each element $\omega\in\Omega$ has positive probability and strictly less than 1 (for example, a uniform probability space). In this case there are no elements $A\in$
+		\item \begin{enumerate}
+			\item Take any discrete finite $\Omega$ such that each element $\omega\in\Omega$ has positive probability and strictly less than 1 (for example, a uniform probability space). In this case there are no elements $A\in\A$ such that $\pr(A)\in\{0,1\}$ apart form $\emptyset$ and $\Omega$ for which probabilities are respectively 0 and 1 so that $\F=\{\emptyset,\Omega\}$.
+			\item Here we need an infinite set 
+		\end{enumerate}
 	\end{enumerate}
 	\subsection{Exercise class 2}
 	\subsection{Exercise class 3}
