txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -129,7 +129,11 @@
 		\end{itemize}
 		\item \begin{enumerate}
 			\item Take any discrete finite $\Omega$ such that each element $\omega\in\Omega$ has positive probability and strictly less than 1 (for example, a uniform probability space). In this case there are no elements $A\in\A$ such that $\pr(A)\in\{0,1\}$ apart form $\emptyset$ and $\Omega$ for which probabilities are respectively 0 and 1 so that $\F=\{\emptyset,\Omega\}$.
-			\item Here we need an infinite set 
+			\item Here we need an infinite set $\Omega$. Let us choose $\Omega=[0,1]$ with $\A=\B([0,1])$ and $\pr=\leb$. In this case
+			\begin{equation*}
+				\pr(\{x\})=0\qquad\every x\in[0,1]
+			\end{equation*}
+			and therefore $\F$ is finite (even countable).
 		\end{enumerate}
 	\end{enumerate}
 	\subsection{Exercise class 2}
