txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -133,7 +133,7 @@
 			\begin{equation*}
 				\pr(\{x\})=0\qquad\every x\in[0,1]
 			\end{equation*}
-			and therefore $\F$ is finite (even countable).
+			and therefore $\F$ is finite (even uncountable).
 		\end{enumerate}
 	\end{enumerate}
 	\subsection{Exercise class 2}
