txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -136,6 +136,9 @@
 			and therefore $\F$ is finite (even uncountable).
 		\end{enumerate}
 	\end{enumerate}
+	\begin{exercise}
+		Let $\Omega,\A,\Pr$
+	\end{exercise}
 	\subsection{Exercise class 2}
 	\subsection{Exercise class 3}
 	\subsection{Exercise class 4}
