txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -137,7 +137,11 @@
 		\end{enumerate}
 	\end{enumerate}
 	\begin{exercise}
-		Let $\Omega,\A,\Pr$
+		Let $(\Omega,\A,\pr)$ be a probability space such that $\{\omega\}\in\A\;\every\omega\in\Omega$. Show that 
+		\begin{equation*}
+			A:=\{\omega\in\Omega:\pr(\{\omega\})>0\}
+		\end{equation*}
+		is countable.
 	\end{exercise}
 	\subsection{Exercise class 2}
 	\subsection{Exercise class 3}
