txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -143,6 +143,7 @@
 		\end{equation*}
 		is countable.
 	\end{exercise}
+	Let us set $ $
 	\subsection{Exercise class 2}
 	\subsection{Exercise class 3}
 	\subsection{Exercise class 4}
