txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -143,7 +143,13 @@
 		\end{equation*}
 		is countable.
 	\end{exercise}
-	Let us set $ $
+	Let us set $A_n=\{\omega\in\Omega:\pr(\{\omega\})>\frac{1}{2}\}$ for $n\geq1$. For example:
+	\begin{align*}
+		A_1&=\{\omega\in\Omega:\pr(\{\omega\})>1\}=\emptyset\\
+		&=\{\omega\in\Omega:\pr(\{\omega\})>1}\\
+		&=\\
+		&\vdots
+	\end{align*}
 	\subsection{Exercise class 2}
 	\subsection{Exercise class 3}
 	\subsection{Exercise class 4}
