--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -146,8 +146,8 @@
 	Let us set $A_n=\{\omega\in\Omega:\pr(\{\omega\})>\frac{1}{2}\}$ for $n\geq1$. For example:
 	\begin{align*}
 		A_1=&\{\omega\in\Omega:\pr(\{\omega\})>1\}=\emptyset\\
-		=&\{\omega\in\Omega:\pr(\{\omega\})>\frac{1}{2}\}\\
-		=&\{\omega\in\Omega:\pr(\{\omega\})>\frac{1}{3}\}\\
+		=&\left\{\omega\in\Omega:\pr(\{\omega\})>\frac{1}{2}\right\}\\
+		=&\left\{\omega\in\Omega:\pr(\{\omega\})>\frac{1}{3}\right\}\\
 		&\vdots
 	\end{align*}
 	\subsection{Exercise class 2}
