--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -150,7 +150,7 @@
 		=&\left\{\omega\in\Omega:\pr(\{\omega\})>\frac{1}{3}\right\}\\
 		&\vdots
 	\end{align*}
-	Since $\pr(\Omega)=1$ we have $\#A_1=$
+	Since $\pr(\Omega)=1$ we have $\#A_1=1$, $\#A_2<2$, $\#A_3<3$
 	\subsection{Exercise class 2}
 	\subsection{Exercise class 3}
 	\subsection{Exercise class 4}
