txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -150,7 +150,15 @@
 		=&\left\{\omega\in\Omega:\pr(\{\omega\})>\frac{1}{3}\right\}\\
 		&\vdots
 	\end{align*}
-	Since $\pr(\Omega)=1$ we have $\#A_1=1$, $\#A_2<2$, $\#A_3<3$
+	Since $\pr(\Omega)=1$ we have $\#A_1=1$, $\#A_2<2$, $\#A_3<3$ so in generale
+	\begin{equation*}
+		\#A_n\leq n.
+	\end{equation*}
+	Notice moreover that $A_1\subset A_2\subset A_3\ldots$ and so 
+	\begin{equation*}
+		A=\bigcup_{n\in\N}A_n.
+	\end{equation*}
+	Thus $A$ is the countable union of finite sets, hence it is countable.
 	\subsection{Exercise class 2}
 	\subsection{Exercise class 3}
 	\subsection{Exercise class 4}
