txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -159,6 +159,9 @@
 		A=\bigcup_{n\in\N}A_n.
 	\end{equation*}
 	Thus $A$ is the countable union of finite sets, hence it is countable.
+	\begin{exercise}
+		Let $(\Omega,\F,\mu)$ be a given measure space.
+	\end{exercise}
 	\subsection{Exercise class 2}
 	\subsection{Exercise class 3}
 	\subsection{Exercise class 4}
