txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -160,7 +160,7 @@
 	\end{equation*}
 	Thus $A$ is the countable union of finite sets, hence it is countable.
 	\begin{exercise}
-		Let $(\Omega,\F,\mu)$ be a given measure space.
+		Let $(\Omega,\F,\mu)$ be a given measure space. Let $\mathcal{N}$
 	\end{exercise}
 	\subsection{Exercise class 2}
 	\subsection{Exercise class 3}
