--- a/PT/pacco.sty
+++ b/PT/pacco.sty
@@ -351,7 +351,7 @@
 \newtcolorbox[use counter=exercise]{exercise}{
 	enhanced standard jigsaw,
 	sharp corners,
-	breakable=true,
+	breakable=false,
 	interior titled code={
 		\path[
 		draw=white,
