txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -160,7 +160,7 @@
 	\end{equation*}
 	Thus $A$ is the countable union of finite sets, hence it is countable.
 	\begin{exercise}
-		Let $(\Omega,\F,\mu)$ be a given measure space. Let $\mathscr{N}$ be the set of null sets (a.k.a. negligible sets) of $\Omega$ and let $\overline{\F}=\sigma(\F\cup\mathscr{N})$
+		Let $(\Omega,\F,\mu)$ be a given measure space. Let $\mathscr{N}$ be the set of null sets (a.k.a. negligible sets) of $\Omega$ and let $\overline{\F}=\sigma(\F\cup\mathscr{N})$.
 	\end{exercise}
 	\subsection{Exercise class 2}
 	\subsection{Exercise class 3}
