txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -160,7 +160,14 @@
 	\end{equation*}
 	Thus $A$ is the countable union of finite sets, hence it is countable.
 	\begin{exercise}
-		Let $(\Omega,\F,\mu)$ be a given measure space. Let $\mathscr{N}$ be the set of null sets (a.k.a. negligible sets) of $\Omega$ and let $\overline{\F}=\sigma(\F\cup\mathscr{N})$.
+		Let $(\Omega,\F,\mu)$ be a given measure space. Let $\mathscr{N}$ be the set of null sets (a.k.a. negligible sets) of $\Omega$ and let $\overline{\F}=\sigma(\F\cup\mathscr{N})$. 
+		\begin{enumerate}[\circnum]
+			\item Prove that $\every B\in\overline{\F}$ we have $B=A\cup N$ for $A\in\F$ and $N\in\mathscr{N}$.
+			\item Letting
+			\begin{equation}
+				\overline{\mu}(A\cup N):=\mu(A)\qquad\every A\in\F,
+			\end{equation}
+		\end{enumerate}
 	\end{exercise}
 	\subsection{Exercise class 2}
 	\subsection{Exercise class 3}
