--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -165,7 +165,7 @@
 			\item Prove that $\every B\in\overline{\F}$ we have $B=A\cup N$ for $A\in\F$ and $N\in\mathscr{N}$.
 			\item Letting
 			\begin{equation}
-				\overline{\mu}(A\cup N):=\mu(A)\qquad\every A\in\F,
+				\overline{\mu}(A\cup N):=\mu(A)\qquad\every A\in\F,N\in\mathscr{N}\tag{$\bullet$}\label{ex5eq1}
 			\end{equation}
 		\end{enumerate}
 	\end{exercise}
