txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -167,6 +167,10 @@
 			\begin{equation}
 				\overline{\mu}(A\cup N):=\mu(A)\qquad\every A\in\F,N\in\mathscr{N}\tag{$\bullet$}\label{ex5eq1}
 			\end{equation}
+			prove that
+			\begin{enumerate}
+				\item $\overline{\mu}(A)=\mu(A),\;ev$
+			\end{enumerate}
 		\end{enumerate}
 	\end{exercise}
 	\subsection{Exercise class 2}
