txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -169,7 +169,9 @@
 			\end{equation}
 			prove that
 			\begin{enumerate}
-				\item $\overline{\mu}(A)=\mu(A),\;ev$
+				\item $\overline{\mu}(A)=\mu(A),\;\every A\in\F$;
+				\item $\overline{\mu}$ is well-posed and \ref{ex5eq1} defines a unique measure $\overline{\mu}$ on $\overline{\F}$;
+				\item $(\Omega,\overline{\F},\overline{\mu})$ is complete.
 			\end{enumerate}
 		\end{enumerate}
 	\end{exercise}
