--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -175,6 +175,12 @@
 			\end{enumerate}
 		\end{enumerate}
 	\end{exercise}
+	\begin{enumerate}[\circnum]
+		\item Setting 
+		\begin{equation*}
+			F=\{A\cup N:A\in\F,N\in\mathscr{N}\}
+		\end{equation*}
+	\end{enumerate}
 	\subsection{Exercise class 2}
 	\subsection{Exercise class 3}
 	\subsection{Exercise class 4}
