txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -179,7 +179,10 @@
 		\item Setting 
 		\begin{equation*}
 			F=\{A\cup N:A\in\F,N\in\mathscr{N}\}
-		\end{equation*}
+		\end{equation*} we see that
+		\begin{equation}
+			\F\cup\mathscr{N}=F\subset\overline{\F}:=\sigma(\F\cup\mathscr{N})
+		\end{equation}
 	\end{enumerate}
 	\subsection{Exercise class 2}
 	\subsection{Exercise class 3}
