txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -181,8 +181,9 @@
 			F=\{A\cup N:A\in\F,N\in\mathscr{N}\}
 		\end{equation*} we see that
 		\begin{equation}
-			\F\cup\mathscr{N}=F\subset\overline{\F}:=\sigma(\F\cup\mathscr{N})\tag{$\otimes$}\label{es5eq2}
+			\F\cup\mathscr{N}=F\subset\overline{\F}:=\sigma(\F\cup\mathscr{N}).\tag{$\otimes$}\label{es5eq2}
 		\end{equation}
+		
 	\end{enumerate}
 	\subsection{Exercise class 2}
 	\subsection{Exercise class 3}
