txs auto checkin

--- a/PT/chap3.tex
+++ b/PT/chap3.tex
@@ -183,7 +183,7 @@
 		\begin{equation}
 			\F\cup\mathscr{N}=F\subset\overline{\F}:=\sigma(\F\cup\mathscr{N}).\tag{$\otimes$}\label{es5eq2}
 		\end{equation}
-		
+		If we prove that $F$ is a \sa{} then we have $\sigma(F)=F$ hence by \ref{es5eq2} we have $F=\F$.
 	\end{enumerate}
 	\subsection{Exercise class 2}
 	\subsection{Exercise class 3}
