Voglio andare ha caza

--- a/NNDL/LabCNN.ipynb
+++ b/NNDL/LabCNN.ipynb
@@ -847,7 +847,7 @@
       "source": [
         "### <font color='gold'>**Training!**</font> 🧠\n",
         "\n",
-        "We are ready to train the network. <u>**Note:**</u> on **Colab con runtime T4 GPU**, the training takes about <font color='red'>2</font> minutes.\n",
+        "We are ready to train the network. <u>**Note:**</u> on **Colab con runtime T4 GPU**, the training takes about <font color='teal'>2</font> minutes.\n",
         "\n",
         "We save the model weights after training, along with the training and validation loss.\n"
       ]
