--- a/PT/pacco.sty
+++ b/PT/pacco.sty
@@ -17,7 +17,7 @@
 \usepackage[cmintegrals,cmbraces]{newtxmath}
 %\usepackage{ebgaramond-maths}
 
-\usepackage[scr=euler,cal=dutchcal,frak=euler,bb=dsfontserif,bbsymbols]{mathalfa}
+\usepackage[scr=euler,cal=pxtx,frak=euler,bb=dsfontserif,bbsymbols]{mathalfa}
 \usepackage{bbm}
 \usepackage{bm}
 %\usepackage{amsmath,amssymb,bbm}
@@ -486,6 +486,7 @@
 \newcommand{\xtilde}{\widetilde{X}}
 \newcommand{\ifonly}{\underline{if and only if}}
 
+\newcommand{\ubracketthin}[1]{\underbracket[0.3pt]{#1}}
 		
 \newcommand*\circled[1]{\tikz[baseline=(char.base)]{
 		\node[shape=circle,draw,
